--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ Colors:
 - Backgrounds - light gray #fbfbfb
 - Background - dark blue #153e52
 - Backgrounds navbar, footer - dark gray #113448
-- Buttons, bullets, icons - green #14bf98
+- Buttons, bullets, icons - green #14bf98 - alternatively use orange: #FFA159
 - Headings text - black #484a46
 - Body text - gray #787976
 - Body text - light gray #dfe5ec
@@ -46,6 +46,41 @@ Colors:
 /******************************/
 /*     01. General Styles     */
 /******************************/
+
+/* LLB style starts */
+.eb-title {
+	font: 700 2.125rem/2.625rem "Open Sans", sans-serif;
+    color: white;
+}
+
+.p-x-large {
+	font: 600 2.125rem/2.625rem "Open Sans", sans-serif;
+    color: white;
+}
+
+.center-btn-cont {
+    text-align:center; 
+    margin-top: 30px
+}
+
+.sep-bar{
+    height:6px;
+    margin-bottom: 1.35rem;
+    width: 100px;
+    min-width: 30px;
+}
+
+.sep-bar.sb-orange {
+    color: #FFA159;
+    background-color: #FFA159;
+}
+
+.sep-bar.sb-green {
+    color: #14bf98;
+    background-color: #14bf98;
+}
+/* LLB style ends */
+
 body,
 html {
     width: 100%;
@@ -795,7 +830,7 @@ input[type='checkbox'] {
 /*    04. Header     */
 /*********************/
 .header {
-	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/background_n02.jpeg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -873,8 +908,8 @@ input[type='checkbox'] {
 /*     06. Description     */
 /***************************/
 .cards-1 {
-	padding-top: 3rem;
-	padding-bottom: 2.875rem;
+	padding-top 1.5rem;
+	padding-bottom: 1.5rem;
 }
 
 .cards-1 .card {
@@ -919,8 +954,8 @@ input[type='checkbox'] {
 /*     07. Services     */
 /************************/
 .cards-2 {
-	padding-top: 6.625rem;	
-	padding-bottom: 1.25rem;	
+	padding-top: 1.5rem;	
+	padding-bottom: 1.5rem;	
 	background-color: #fbfbfb;
 }
 
@@ -1197,8 +1232,8 @@ input[type='checkbox'] {
 /*     10. Testimonials     */
 /****************************/
 .slider {
-	padding-top: 6.375rem;
-	padding-bottom: 6.5rem;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 	background-color: #fbfbfb;
 }
 
@@ -1513,8 +1548,8 @@ input[type='checkbox'] {
 /*     14. Team     */
 /********************/
 .basic-2 {
-	padding-top: 6.375rem;
-	padding-bottom: 3.375rem;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 	background-color: #fbfbfb;
 	text-align: center;
 }
@@ -1597,8 +1632,8 @@ input[type='checkbox'] {
 /*     15. About     */
 /*********************/
 .counter {
-	padding-top: 6.875rem;
-	padding-bottom: 5.25rem;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 }
 
 .counter .image-container {
@@ -1662,8 +1697,8 @@ input[type='checkbox'] {
 /*     16. Contact     */
 /***********************/
 .form-2 {
-	padding-top: 6.625rem;
-	padding-bottom: 5.625rem;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
 	background-color: #fbfbfb;
 }
 
