--- a/css/styles.css
+++ b/css/styles.css
@@ -1563,7 +1563,7 @@ input[type='checkbox'] {
 	display: inline-block;
 	max-width: 13rem;
 	margin-right: 1.5rem;
-	margin-bottom: 3.5rem;
+	margin-bottom: 1.5rem; /*3.5rem;*/
 	margin-left: 1.5rem;
 }
 
