--- a/css/styles.css
+++ b/css/styles.css
@@ -1233,9 +1233,9 @@ input[type='checkbox'] {
 /*     10. Testimonials     */
 /****************************/
 .slider {
-	padding-top: 2.1rem; /*6.375rem;*/
-	padding-bottom: 3.5rem; /*6.5rem;*/
-	background-color: #fbfbfb;
+	padding-top: 6.375rem; /*2.1rem; /*6.375rem;*/
+	padding-bottom: 6.5rem; /3.5rem; /*6.5rem;*/
+	background-color: #FFFFFF; /*#fbfbfb;*/
 }
 
 .slider h2 {
@@ -1549,9 +1549,9 @@ input[type='checkbox'] {
 /*     14. Team     */
 /********************/
 .basic-2 {
-	padding-top: 20.5; /*6.375rem;*/
-	padding-bottom: 0.25rem; /*3.375rem;*/
-	background-color: #fbfbfb;
+	padding-top: 6.375rem;/*20.5; /*6.375rem;*/
+	padding-bottom: 3.375rem; /*0.25rem; /*3.375rem;*/
+	background-color: #FFFFFF; /* #fbfbfb; */
 	text-align: center;
 }
 
@@ -1695,12 +1695,12 @@ input[type='checkbox'] {
 
 
 /***********************/
-/*     16. Contact     */
+/*     16. Contacts     */
 /***********************/
 .form-2 {
-	padding-top: 1.15rem; /*6.625rem;*/
-	padding-bottom: 1.5rem; /*5.625rem;*/
-	background-color: #fbfbfb;
+	padding-top: 6.625rem;
+	padding-bottom: 5.625rem;
+	background-color: #FFFFFF; /* #fbfbfb; */
 }
 
 .form-2 .text-container {
